tercer commit arreglo contraseña

--- a/clase1.html
+++ b/clase1.html
@@ -113,7 +113,7 @@
                <label for="password" class="label">Password</label>
                <input type="password" id="password" placeholder="*********" class="input input-password">
 
-               <label for="newpassword" class="label">Password</label>
+               <label for="newpassword" class="label">Confirm Password</label>
                <input type="password" id="newpassword" placeholder="*********" class="input input-password">
             
                <input type="submit" value="Confirm" class="primary-button login-button">
