--- a/mi-orden.html
+++ b/mi-orden.html
@@ -115,46 +115,46 @@ font-family: 'Quicksand', sans-serif;
                 <div class="order">
             
                  <p>
-                     <span>14.03.22</span>
-                     <span>6 articles</span>
+                     <span>14.03.2022</span>
+                     <span>5 articles</span>
                  </p>
-                 <p>$560.00</p>
+                 <p>$179.00</p>
                 </div>
 
                 <div class="shopping-cart">
                     <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Bike">
+                        <img src="https://images.pexels.com/photos/301367/pexels-photo-301367.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="lipstick">
                     </figure>
-                    <p>Bike</p>
+                    <p>Lipstick</p>
+                    <p>$13.00</p>
+                </div>
+                <div class="shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/354962/pexels-photo-354962.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Blush">
+                    </figure>
+                    <p>Blush</p>
+                    <p>$20.00</p>
+                </div>
+                <div class="shopping-cart">
+                    <figure>
+                        <img src="https://images.pexels.com/photos/1327689/pexels-photo-1327689.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Color Palette">
+                    </figure>
+                    <p>Color Palette</p>
                     <p>$130.00</p>
                 </div>
                 <div class="shopping-cart">
                     <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Bike">
+                        <img src="https://images.pexels.com/photos/1472098/pexels-photo-1472098.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Brushes">
                     </figure>
-                    <p>Bike</p>
-                    <p>$130.00</p>
+                    <p>Brushes</p>
+                    <p>$11.00</p>
                 </div>
                 <div class="shopping-cart">
                     <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Bike">
+                        <img src="https://images.pexels.com/photos/1115350/pexels-photo-1115350.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Glitters">
                     </figure>
-                    <p>Bike</p>
-                    <p>$130.00</p>
-                </div>
-                <div class="shopping-cart">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$130.00</p>
-                </div>
-                <div class="shopping-cart">
-                    <figure>
-                        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Bike">
-                    </figure>
-                    <p>Bike</p>
-                    <p>$130.00</p>
+                    <p>Glitters</p>
+                    <p>$5.00</p>
                 </div>
                 </div>
             </div>
