ultimo commit d emi cuenta

--- a/mi-cuenta.html
+++ b/mi-cuenta.html
@@ -112,7 +112,7 @@
 
                         <label for="email"
                          class="label">E-mail address</label>
-                        <p class="value">Your e-mail</p>
+                        <p class="value">example@gmail.com</p>
 
                          <label for="password"
                           class="label">Password</label>
