--- a/menu-mobile.html
+++ b/menu-mobile.html
@@ -95,7 +95,7 @@
     </ul>
     <ul>
     <li>
-        <a href="/" class="email">your-email@gmail.com</a>
+        <a href="/" class="email">example@gmail.com</a>
     </li>
     <li>
         <a href="/" class="sign-out">Sign out</a>
