ultimo commit login

--- a/login.html
+++ b/login.html
@@ -131,7 +131,7 @@
                <label for="email"
                 class="label">Email adress </label>
                <input type="text"
-                id="email" placeholder="gimena@example.com" class="input input-email">
+                id="email" placeholder="example@gmail.com" class="input input-email">
 
                <label for="password" class="label">Password</label>
                <input type="password" id="password" placeholder="*********" class="input input-password">
