ultimo commit inicio

--- a/inicio.html
+++ b/inicio.html
@@ -81,11 +81,12 @@
     <div class="cards-container">
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/163084/typewriter-vintage-old-vintage-typewriter-163084.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
-            <p>$120,00</p>
-            <p>Bike</p>
+            <p>$400,00</p>
+            <p>Typewriter
+            </p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
@@ -94,11 +95,11 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/821738/pexels-photo-821738.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
-            <p>$120,00</p>
-            <p>Bike</p>
+            <p>$320,00</p>
+            <p>Projector</p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
@@ -107,11 +108,11 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/775414/pexels-photo-775414.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
-            <p>$120,00</p>
-            <p>Bike</p>
+            <p>$450,00</p>
+            <p>Vinyl</p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
@@ -120,11 +121,11 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/590663/pexels-photo-590663.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
-            <p>$120,00</p>
-            <p>Bike</p>
+            <p>$25,00</p>
+            <p>Cassette</p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
@@ -133,11 +134,11 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/5018376/pexels-photo-5018376.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
             <p>$120,00</p>
-            <p>Bike</p>
+            <p>Glasses</p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
@@ -146,11 +147,11 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/7709616/pexels-photo-7709616.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
-            <p>$120,00</p>
-            <p>Bike</p>
+            <p>$220,00</p>
+            <p>Mirror</p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
@@ -159,11 +160,11 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/5378353/pexels-photo-5378353.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
-            <p>$120,00</p>
-            <p>Bike</p>
+            <p>$175,00</p>
+            <p>Phone</p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
@@ -172,11 +173,11 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/9140599/pexels-photo-9140599.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
-            <p>$120,00</p>
-            <p>Bike</p>
+            <p>$587,00</p>
+            <p>Computer</p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
@@ -185,11 +186,11 @@
       </div>
 
       <div class="product-card">
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+        <img src="https://images.pexels.com/photos/9140592/pexels-photo-9140592.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="">
         <div class="product-info">
           <div>
-            <p>$120,00</p>
-            <p>Bike</p>
+            <p>$119,00</p>
+            <p>SEGA</p>
           </div>
           <figure>
             <img src="./icons/bt_add_to_cart.svg" alt="">
