--- a/crear-y-editar-cuenta.html
+++ b/crear-y-editar-cuenta.html
@@ -118,12 +118,12 @@
                         <label for="name"
                         class="label">Name</label>
                        <input type="text" id="name"
-                        placeholder="Tu nombre"
+                        placeholder="Your name"
                          class="input input-name">
                         <label for="email"
                          class="label">E-mail address</label>
                         <input type="text" id="email"
-                         placeholder="Tu e-mail"
+                         placeholder="example@gmail.com"
                           class="input input-email">
                          <label for="password"
                           class="label">Password</label>
